--- a/index.html
+++ b/index.html
@@ -2,29 +2,37 @@
 <html>
 <head>
 	<title>Etch-a-Sketch</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	
+
 </head>
 <body>
-	<div class="wrapper">
 		<div class="container">
+			<header>
+				<h1>Etch-a-Sketch Project</h1>
+			</header>
+			<div class="main-container">
 			<nav>
 				<form>
-					<button>Clear</button>
-					<button>Rainbow Mode</button>
+					<button type="button" class="btn-clear">Clear</button>
+					<button typle="button" class="rainbow">Rainbow Mode</button>
 				</form>
 			</nav>
-			<div class="etch-container">
 				<div class="etch-frame">
 					<h2>Etch a Sketch</h2>
 					<div class= "right-knob">
 					</div>
+						<div class="grid">
+						</div>
 					<div class="left-knob">
 					</div>
-				</div>
-					<div class="grid-div">
-
-					</div>
 			</div>
+			<footer>
+			<p>Created by: Kevin Mulhern</p>
+			</footer>
 		</div>
-	</div>
+	<script type="text/javascript" src="javascript/jquery.js"></script>
+	<script type="text/javascript" src="javascript/application.js"></script>
 </body>
 </html>
